log/build_2024-04-29_21-52-06/mini_challenge_2/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/mcr2/mini_challenges_eq5/install/mini_challenge_2/lib/python3.10/site-packages/mini_challenge_2/Controller.py", line 81
    if ()
         ^
SyntaxError: expected ':'

